--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h1>bakkup</h1>
              </div>
                 <div class="img">
-               <img src="/img/hero.png" alt="">
+               <img src="hero.png" alt="">
                 </div>
             </div>
             <div class="sec2">
